--- a/demo.ipynb
+++ b/demo.ipynb
@@ -40,7 +40,9 @@
     }
    ],
    "source": [
-    "# setup LLM API key - not needed for the real thing where we will use gcloud\n",
+    "# My home LLM Client uses my own Anthropic API key and makes all requests in \"interactive\" mode\n",
+    "# In prod, we will write an LLM Client that uses gcloud and makes batch requests instead\n",
+    "# the contract of BaseLLMClient is exactly the same either way.\n",
     "import os\n",
     "\n",
     "from dotenv import load_dotenv\n",
@@ -70,7 +72,7 @@
     "logging.getLogger(\"httpcore\").setLevel(logging.WARNING)\n",
     "\n",
     "from pipeline import (\n",
-    "    LLMClient,\n",
+    "    InteractiveAnthropicClient,\n",
     "    RoomRecommendationStep,\n",
     "    StyleRecommendationStep,\n",
     "    load_products,\n",
@@ -89,32 +91,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0fa867f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline: room_rec → style_rec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "llm_client = LLMClient(model=\"claude-3-5-haiku-20241022\", max_workers=15)\n",
+    "llm_client = InteractiveAnthropicClient(model=\"claude-3-5-haiku-20241022\", max_workers=15)\n",
     "\n",
-    "steps = [\n",
+    "# Current design is barebones, just a linear pipeline.\n",
+    "# In the future, we could add branches, loops, etc. But no reason for that yet.\n",
+    "graph = [\n",
     "    RoomRecommendationStep(name=\"room_rec\", llm_client=llm_client),\n",
     "    StyleRecommendationStep(name=\"style_rec\", llm_client=llm_client),\n",
-    "]\n",
-    "\n",
-    "print(f\"Pipeline: {' → '.join(s.name for s in steps)}\")"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1ecc5bde",
    "metadata": {},
    "outputs": [
@@ -122,7 +116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO pipeline.steps.load_products — [load_products] run_id=fe68be49-cc5f-4d00-8715-1bf5a14ed9f7, 5 products loaded\n",
+      "INFO pipeline.steps.load_products — [load_products] run_id=19c1dbc0-ea07-4de1-826f-00c8d7920b53, 5 products loaded\n",
       "INFO pipeline.steps.base_step — [room_rec] === starting ===\n",
       "INFO pipeline.steps.base_step — [room_rec] ingest: 5 items, keys: ['Product']\n",
       "INFO pipeline.steps.base_step — [room_rec] transform: 5 requests\n",
@@ -134,16 +128,18 @@
       "INFO pipeline.steps.base_step — [style_rec] ingest: 15 items, keys: ['Product', 'Room']\n",
       "INFO pipeline.steps.base_step — [style_rec] transform: 15 requests\n",
       "INFO pipeline.steps.base_step — [style_rec] request: 15 responses\n",
-      "INFO pipeline.steps.base_step — [style_rec] validate: 45 outputs\n",
-      "INFO pipeline.steps.base_step — [style_rec] end: 45 items, keys: ['Product', 'Room', 'Style']\n",
+      "INFO pipeline.steps.base_step — [style_rec] validate: 44 outputs\n",
+      "INFO pipeline.steps.base_step — [style_rec] end: 44 items, keys: ['Product', 'Room', 'Style']\n",
       "INFO pipeline.steps.base_step — [style_rec] === done ===\n"
      ]
     }
    ],
    "source": [
+    "# initialize state with a list of products to use\n",
     "state = load_products()\n",
     "\n",
-    "for step in steps:\n",
+    "# run pipeline\n",
+    "for step in graph:\n",
     "    state.update(step(state))"
    ]
   },
@@ -156,13 +152,13 @@
     {
      "data": {
       "text/plain": [
-       "LLMClient(\n",
+       "InteractiveAnthropicClient(\n",
        "\tmodel='claude-3-5-haiku-20241022',\n",
        "\tmax_workers=15,\n",
        "\trequests=20,\n",
        "\tinput_tokens=11435,\n",
-       "\toutput_tokens=8409,\n",
-       "\ttotal_tokens=19844\n",
+       "\toutput_tokens=8621,\n",
+       "\ttotal_tokens=20056\n",
        ")"
       ]
      },
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4xvferya0qm",
    "metadata": {},
    "outputs": [
@@ -186,7 +182,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we got 45 results\n",
+      "FINAL STATE\n",
+      "`state` is just a dict. It has two keys:\n",
+      "\t\"item_data\": 44x elements: ['Product', 'Room', 'Style']\n",
+      "\t\"metadata\": flat dict of metadata: {'run_id': '19c1dbc0-ea07-4de1-826f-00c8d7920b53'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# examine final state - this is what is passed between each stage\n",
+    "from pipeline import ITEM_DATA, METADATA\n",
+    "\n",
+    "print(\"FINAL STATE\")\n",
+    "print(\"`state` is just a dict. It has two keys:\")\n",
+    "print(f\"\\t\\\"{ITEM_DATA}\\\": {len(state[ITEM_DATA])}x elements: {list(state[ITEM_DATA][0].keys())}\")\n",
+    "print(f\"\\t\\\"{METADATA}\\\": flat dict of metadata: {state[METADATA]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5795ad53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "first result:\n"
      ]
     },
@@ -199,10 +221,10 @@
        "  'material': 'solid oak',\n",
        "  'price': 1299.0},\n",
        " 'Room': {'name': 'Dining Room',\n",
-       "  'reasoning': \"The Oakwood Dining Table is perfectly designed for a dining room, given its solid oak construction and classic furniture category. Its substantial material and price point suggest it's a high-quality dining table meant to be the centerpiece of a formal or traditional dining space, providing an elegant surface for meals and gatherings.\"},\n",
-       " 'Style': {'name': 'Rustic Modern',\n",
-       "  'color_palette': ['warm beige', 'deep forest green', 'charcoal gray'],\n",
-       "  'reasoning': \"The solid oak dining table is perfect for a Rustic Modern style, which celebrates natural materials and craftsmanship. The warm tones of oak wood pair beautifully with earthy, muted colors that highlight its natural grain and texture. Charcoal gray and forest green accents can create depth and contrast, while maintaining a connection to nature. This style allows the table to be a centerpiece that showcases the wood's inherent beauty, combining traditional craftsmanship with contemporary design elements.\"}}"
+       "  'reasoning': 'The Oakwood Dining Table is perfectly suited for a dining room as it is specifically designed for dining purposes. Made of solid oak, it offers a classic, timeless look that can anchor the dining space with a high-quality, natural wood aesthetic. Its substantial material and craftsmanship justify the premium price point and make it an ideal centerpiece for formal or casual dining areas.'},\n",
+       " 'Style': {'name': 'Scandinavian Minimalist',\n",
+       "  'color_palette': ['white', 'light gray', 'natural wood tones'],\n",
+       "  'reasoning': \"The solid oak dining table perfectly embodies the Scandinavian design philosophy of showcasing natural materials and clean lines. This style emphasizes simplicity, functionality, and the beauty of wood grain. The light, neutral color palette will highlight the oak's warm tones, creating a bright and airy dining space that feels both modern and timeless. Minimalist chairs with sleek designs and light upholstery would complement the table's natural aesthetic.\"}}"
       ]
      },
      "execution_count": 8,
@@ -211,38 +233,69 @@
     }
    ],
    "source": [
-    "# examine one output\n",
-    "from pipeline import ITEM_DATA\n",
+    "# examine just one element. It is a unique combination of outputs from each step.\n",
+    "# NOTE that our pipeline started with 5x SKUs, but\n",
+    "#    - RoomRecommendationStep fanned out to 1-3x Rooms per SKU\n",
+    "#    - StyleRecommendationStep fanned out to 1-3x Styles per Room\n",
+    "# 5 x 3 x 3 = 45 unique results\n",
     "\n",
-    "\n",
-    "print(f'we got {len(state[ITEM_DATA])} results')\n",
-    "item = state[ITEM_DATA][0]\n",
+    "first_item = state[ITEM_DATA][0]\n",
     "print(\"first result:\")\n",
-    "item"
+    "first_item"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "eb7ff0a6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Room(name='Dining Room', reasoning=\"The Oakwood Dining Table is perfectly designed for a dining room, given its solid oak construction and classic furniture category. Its substantial material and price point suggest it's a high-quality dining table meant to be the centerpiece of a formal or traditional dining space, providing an elegant surface for meals and gatherings.\")"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name='Dining Room' reasoning='The Oakwood Dining Table is perfectly suited for a dining room as it is specifically designed for dining purposes. Made of solid oak, it offers a classic, timeless look that can anchor the dining space with a high-quality, natural wood aesthetic. Its substantial material and craftsmanship justify the premium price point and make it an ideal centerpiece for formal or casual dining areas.'\n",
+      "Dining Room\n"
+     ]
     }
    ],
    "source": [
+    "# although state is a dict, each step accessed it in a nicely structured way - letting us do static type checking\n",
     "# show how each step is accessing structured information from this state\n",
     "from pipeline.models import Room\n",
+    "room_obj = Room.from_state_dict(first_item)\n",
+    "print(room_obj)\n",
+    "print(room_obj.name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "704601d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "state.json: (0.048 MB)\n",
+      "extended to 100k SKUs, this would be 109.029 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# state is JSON-serializable out of the box. If we want to save it to disk/gcs to checkpoint, it's trivial\n",
+    "import json\n",
+    "import tempfile\n",
     "\n",
-    "Room.from_state_dict(item)"
+    "with tempfile.TemporaryDirectory() as tmp_dir:\n",
+    "    state_path = os.path.join(tmp_dir, \"state.json\")\n",
+    "    with open(state_path, \"w\") as f:\n",
+    "        json.dump(state, f)\n",
+    "    size = os.path.getsize(state_path)\n",
+    "    size_mb = size / 1024 / 1024    \n",
+    "    print(f\"state.json: ({size_mb:.3f} MB)\")\n",
+    "    print(f\"extended to 100k SKUs, this would be {size_mb * 100_000 / len(state[ITEM_DATA]):.3f} MB\")"
    ]
   },
   {
@@ -254,65 +307,14 @@
     "\n",
     "## Extending the Pipeline\n",
     "\n",
-    "- **Add 2x new dataclasses**: One which is the expected format of the LLM response, and one which represents a singular result, if this step fans out. For example, a `RoomResponse` contains 1-3 `Room`, and we fan out the seed product. The final output (`Room`) must subclass `StepOutput`\n",
+    "- **Add 2x new dataclasses**: One which is the expected format of the LLM response, and one which represents a singular result, if this step fans out. The final output of the stage (`Room`) must subclass `StepOutput`\n",
+    "    - For example, a `RoomResponse` contains 1-3 `Room`, and we fan out. This stage thus ~3x's the input\n",
     "- **Add a new step**: subclass `BaseStep`, implement `transform` and `validate`. These should use the dataclasses you just wrote\n",
-    "- **Fan-out in `validate`**: decapsulate the LLM response into individual `StepOutput` objects — one per unit of work for the next step. Return `(source_item, output)` pairs. Validate must discard invalid results (but you're welcome to log them somewhere if you'd like)\n",
-    "- **Typed downstream access**: use `Model.from_state_dict(item)` in `transform` or `validate` to get typed access to any prior step's output.\n",
+    "    - if you dont need to use an LLM for any stage, that's fine! You can override what the `request()` method does.\n",
+    "- **Fan-out in `validate`**: decapsulate the LLM response into individual `StepOutput` objects — one per unit of work for the next step. Return `(source_item, output)` pairs.\n",
+    "    - Validate must discard invalid results, but you're welcome to log them somewhere if you'd like - so we can retry later\n",
+    "- **Typed downstream access**: use `Model.from_state_dict(item)` in `transform` or `validate` to get typed access to any prior step's output. No need to access dict keys directly\n",
     "- **Disk serialization**: `to_state_dict()` writes `model_dump()` dicts, so state is JSON-serializable out of the box. `BaseStep.ingest()` and `BaseStep.end()` just hand off the raw dict. Users may get involved to serialize/deserialize this if they'd like."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "af3df30d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['items'])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "state.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c6630164",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['sku', 'Product', 'Room', 'Style'])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(state['items'])\n",
-    "state['items'][0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5be144af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pipeline.models import Room\n",
-    "Room.from_state_dict(state[ITEM_DATA][0])"
    ]
   },
   {
