--- a/demo.ipynb
+++ b/demo.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "4xvferya0qm",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
      "text": [
       "FINAL STATE\n",
       "`state` is just a dict. It has two keys:\n",
-      "\t\"item_data\": 44x elements: ['Product', 'Room', 'Style']\n",
+      "\t\"item_data\": 44x elements, each is: (Product, Room, Style)\n",
       "\t\"metadata\": flat dict of metadata: {'run_id': '19c1dbc0-ea07-4de1-826f-00c8d7920b53'}\n"
      ]
     }
@@ -192,10 +192,11 @@
    "source": [
     "# examine final state - this is what is passed between each stage\n",
     "from pipeline import ITEM_DATA, METADATA\n",
+    "itemdata_keys = \", \".join(list(state[ITEM_DATA][0].keys()))\n",
     "\n",
     "print(\"FINAL STATE\")\n",
     "print(\"`state` is just a dict. It has two keys:\")\n",
-    "print(f\"\\t\\\"{ITEM_DATA}\\\": {len(state[ITEM_DATA])}x elements: {list(state[ITEM_DATA][0].keys())}\")\n",
+    "print(f\"\\t\\\"{ITEM_DATA}\\\": {len(state[ITEM_DATA])}x elements, each is: ({itemdata_keys})\")\n",
     "print(f\"\\t\\\"{METADATA}\\\": flat dict of metadata: {state[METADATA]}\")"
    ]
   },
