--- a/demo.ipynb
+++ b/demo.ipynb
@@ -307,7 +307,7 @@
     "\n",
     "## Extending the Pipeline\n",
     "\n",
-    "- **Add 2x new dataclasses**: One which is the expected format of the LLM response, and one which represents a singular result, if this step fans out. The final output of the stage (`Room`) must subclass `StepOutput`\n",
+    "- **Add 2x new dataclasses**: One which is the expected format of the LLM response, and one which represents a singular result, if this step fans out. The final output of the stage must subclass `StepOutput`\n",
     "    - For example, a `RoomResponse` contains 1-3 `Room`, and we fan out. This stage thus ~3x's the input\n",
     "- **Add a new step**: subclass `BaseStep`, implement `transform` and `validate`. These should use the dataclasses you just wrote\n",
     "    - if you dont need to use an LLM for any stage, that's fine! You can override what the `request()` method does.\n",
