--- a/demo.ipynb
+++ b/demo.ipynb
@@ -313,7 +313,7 @@
     "    - if you dont need to use an LLM for any stage, that's fine! You can override what the `request()` method does.\n",
     "- **Fan-out in `validate`**: decapsulate the LLM response into individual `StepOutput` objects — one per unit of work for the next step. Return `(source_item, output)` pairs.\n",
     "    - Validate must discard invalid results, but you're welcome to log them somewhere if you'd like - so we can retry later\n",
-    "- **Typed downstream access**: use `Model.from_state_dict(item)` in `transform` or `validate` to get typed access to any prior step's output. No need to access dict keys directly\n",
+    "- **Typed downstream access**: use `Model.from_state_dict(item)` in `transform` or `validate` to get typed access to any prior step's output. Avoid accessing hardcoded keys, ever.\n",
     "- **Disk serialization**: `to_state_dict()` writes `model_dump()` dicts, so state is JSON-serializable out of the box. `BaseStep.ingest()` and `BaseStep.end()` just hand off the raw dict. Users may get involved to serialize/deserialize this if they'd like."
    ]
   },
